# XMail

./: .env.example  .gitignore  LICENSE  README.md  RELEASE.md  bash.exe.stackdump  deploy.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: auto-release.yml  build.yml  ci.yml  cleanup-workflows.yml  cleanup.yml  release.yml  test-build.yml  test.yml
.kiro/specs/: email-categorization.md  email-provider-integration.md  xmail-project-overview.md
.kiro/specs/email-manager/: design.md  requirements.md  tasks.md
.kiro/steering/: api-documentation.md  email-integration.md  project-standards.md
server/: README.md  jest.config.js  nodemon.json  package.json  server.js  simple-mailbox-tester.js  simple-schema.sql  tsconfig.json
server/src/: index.ts  simple-server.ts
src/: App.css  App.tsx  App.vue  index.css  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: email.rs  mod.rs  provider.rs
src-tauri/src/database/: connection.rs
src-tauri/src/models/: email.rs  email_provider.rs  mod.rs
src-tauri/src/services/: category_service.rs  crypto_service.rs  email_service.rs  mod.rs  provider_service.rs  search_service.rs  sync_service.rs
src/components/: AccountManager.vue  CategoryManager.vue
src/contexts/: ThemeContext.tsx
src/pages/: Compose.tsx  Dashboard.tsx  EmailDetail.tsx  EmailList.tsx  Settings.tsx
src/types/: index.ts
src/utils/: email-providers.ts
(+48 files in other folders)
